--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "fluent"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/navedm1424/svg-path-kit.git"
+  },
   "devDependencies": {
     "typescript": "^5.9.3"
   }
