--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "svg-path-kit",
-  "version": "1.0.4",
-  "description": "Build precise, complex SVG paths with smooth curves and circular or elliptical arcs using a fluent API.",
+  "version": "1.0.5",
+  "description": "Build precise, complex SVG paths with Hermite curves and circular or elliptical arcs using a builder API.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
   "files": [
-    "dist",
-    "assets"
+    "dist"
   ],
   "keywords": [
     "svg",
