--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*", "utils/**/*"]
+  "include": ["src/**/*",
+    "src/utils/**/*"
+  ]
 }
