--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "svg-path-kit",
   "version": "1.0.8",
-  "description": "Build precise, complex SVG paths with Hermite curves and circular or elliptical arcs using a builder API.",
+  "description": "Build complex SVG paths with cubic Bézier curves and splines using a builder API.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
-    "./utils": "./dist/utils/index.js"
+    "./utils": "./dist/utils/index.js",
+    "./curves": "./dist/curves/index.js"
   },
   "scripts": {
     "build": "tsc"
