--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svg-path-kit",
   "version": "1.0.8",
-  "description": "Build complex SVG paths with cubic Bézier curves and splines using a builder API.",
+  "description": "Build complex SVG paths with smooth continuous splines using a builder API.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
   "main": "dist/index.js",
