--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svg-path-kit",
-  "version": "1.0.8",
-  "description": "Build complex SVG paths with smooth continuous splines using a builder API.",
+  "version": "1.0.9",
+  "description": "Build complex SVG paths with smooth continuous splines using a geometry-oriented builder API.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
   "main": "dist/index.js",
@@ -20,7 +20,7 @@
   "keywords": [
     "svg",
     "path",
-    "toolkit",
+    "vector",
     "geometry",
     "builder"
   ],
