--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg-path-kit",
-  "version": "1.2.0-canary.1",
+  "version": "1.1.0-canary.1",
   "description": "Build complex SVG paths with smooth continuous splines using a geometry-oriented builder API.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
@@ -27,7 +27,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/navedm1424/svg-path-kit.git"
+    "url": "git+https://github.com/navedm1424/svg-path-kit.git"
   },
   "devDependencies": {
     "typescript": "^5.9.3"
