--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg-path-kit",
-  "version": "1.1.0",
+  "version": "1.2.0-canary.7",
   "description": "Build complex SVG paths with smooth continuous splines using a geometry-oriented builder API.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
@@ -8,8 +8,9 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
-    "./utils": "./dist/utils/index.js",
-    "./curves": "./dist/curves/index.js"
+    "./numbers": "./dist/numbers/index.js",
+    "./curves": "./dist/curves/index.js",
+    "./animate": "./dist/animate/index.js"
   },
   "scripts": {
     "build": "tsc"
