--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*",
-    "src/utils/**/*"
-  ]
+  "include": ["src/**/*"]
 }
