--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "ESNext",
     "verbatimModuleSyntax": true,
     "declaration": true,
+    "stripInternal": true,
     "outDir": "dist",
     "strict": true,
     "noUncheckedIndexedAccess": true,
