--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svg-path-kit",
   "version": "1.2.0-beta.4",
-  "description": "Build complex SVG paths with smooth continuous splines using a geometry-oriented builder API.",
+  "description": "A library for building and animating complex SVG paths.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
   "main": "dist/index.js",
