--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svg-path-kit",
   "version": "1.2.0-beta.4",
-  "description": "A library for building and animating complex SVG paths.",
+  "description": "A geometry-oriented library for building and animating complex SVG paths.",
   "author": "Naved <navedm1424@gmail.com>",
   "type": "module",
   "main": "dist/index.js",
@@ -33,5 +33,8 @@
   "devDependencies": {
     "@types/node": "^25.2.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "vitest": "^4.0.18"
   }
 }
