--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
+    "typescript": "^5.9.3",
     "vitest": "^4.0.18"
   }
 }
